// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignDetail component should display default value when it's a new campaign 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="d-flex align-items-center justify-content-between flex-wrap page-header"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations"
            >
              Integrations
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations/smooch_inside/1"
            >
              Chat (Deprecated)
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations/smooch_inside/1/campaigns"
            >
              Campaigns
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            New campaign
          </li>
        </ol>
      </nav>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/migration"
      >
        Migration
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/appearance"
      >
        Appearance
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/installation"
      >
        Installation
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/preferences"
      >
        Preferences
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/campaigns"
      >
        Campaigns
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/quick_replies"
      >
        Quick replies
      </a>
    </nav>
    <div
      class="page-container container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <form
            class=""
          >
            <div
              class="mb-4"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <label
                  class="control-label"
                  for="id-name"
                >
                  Campaign name
                </label>
                <div
                  class=""
                >
                  <input
                    class="form-control"
                    id="id-name"
                    placeholder="My new campaign"
                    required=""
                    type="input"
                    value=""
                  />
                </div>
              </div>
            </div>
            <h5>
              Choose your audience
            </h5>
            <div
              class="mb-4"
            >
              <div
                class="triggerWrapper"
              >
                <div
                  class="btn-frozen btn btn-info"
                >
                  Current URL
                </div>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class=""
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          is
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          is not
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          contains
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          does not contain
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          starts with
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          ends with
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="InputField form-group"
                  color=""
                >
                  <div
                    class=""
                  >
                    <input
                      class="form-control"
                      id="id-value"
                      type="input"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="closeWrapper"
                >
                  <i
                    class="material-icons text-danger clickable"
                  >
                    clear
                  </i>
                </div>
              </div>
              <div
                class="dropdown"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="mr-2 dropdown-toggle btn btn-secondary"
                  type="button"
                >
                  <i
                    class="material-icons mr-2"
                  >
                    add
                  </i>
                  Add condition
                </button>
                <div
                  aria-hidden="true"
                  class="dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Current URL
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Time spent on page
                  </button>
                </div>
              </div>
            </div>
            <h5>
              Write your message
            </h5>
            <div
              class="mb-4"
            >
              <div
                class="mb-2 authorWrapper"
              >
                <span>
                  From: 
                </span>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="authorInput"
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          Random agent
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          <div
                            class="AgentLabel"
                          >
                            <span
                              class="material-icons md-2"
                            >
                              account_circle
                            </span>
                            <span
                              class="name"
                              style="max-width: 100px;"
                            >
                              John
                            </span>
                          </div>
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          <div
                            class="AgentLabel"
                          >
                            <span
                              class="material-icons md-2"
                            >
                              account_circle
                            </span>
                            <span
                              class="name"
                              style="max-width: 100px;"
                            >
                              Doe
                            </span>
                          </div>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <div
                    class="InputField required form-group"
                    color=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="rich-textarea-wrapper"
                      >
                        <div
                          class="editor-wrapper"
                        >
                          <div
                            class="withMinHeight"
                          >
                            <div
                              class="DraftEditor-root"
                            >
                              <div
                                class="public-DraftEditorPlaceholder-root"
                              >
                                <div
                                  class="public-DraftEditorPlaceholder-inner"
                                  id="placeholder-someRandomKey"
                                  style="white-space: pre-wrap;"
                                >
                                  Write your message
                                </div>
                              </div>
                              <div
                                class="DraftEditor-editorContainer"
                              >
                                <div
                                  aria-autocomplete="list"
                                  aria-describedby="placeholder-someRandomKey"
                                  aria-expanded="true"
                                  class="notranslate public-DraftEditor-content"
                                  contenteditable="true"
                                  role="combobox"
                                  spellcheck="false"
                                  style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                                >
                                  <div
                                    data-contents="true"
                                  >
                                    <div
                                      class=""
                                      data-block="true"
                                      data-editor="someRandomKey"
                                      data-offset-key="someRandomKey-0-0"
                                    >
                                      <div
                                        class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                        data-offset-key="someRandomKey-0-0"
                                      >
                                        <span
                                          data-offset-key="someRandomKey-0-0"
                                        >
                                          <br
                                            data-text="true"
                                          />
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <input
                              required=""
                              style="opacity: 0; height: 0px; padding: 0px; overflow: hidden;"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="editor-toolbar page"
                        >
                          <div
                            class="actionsWrapper"
                          >
                            <div
                              class="actions"
                            >
                              <button
                                class="button btn btn-secondary btn-transparent"
                                title="Bold"
                                type="button"
                              >
                                <i
                                  class="material-icons"
                                >
                                  format_bold
                                </i>
                              </button>
                              <button
                                class="button btn btn-secondary btn-transparent"
                                title="Italic"
                                type="button"
                              >
                                <i
                                  class="material-icons"
                                >
                                  format_italic
                                </i>
                              </button>
                              <button
                                class="button btn btn-secondary btn-transparent"
                                title="Underline"
                                type="button"
                              >
                                <i
                                  class="material-icons"
                                >
                                  format_underline
                                </i>
                              </button>
                              <span
                                class="popoverWrapper"
                              >
                                <button
                                  class="button btn btn-secondary btn-transparent"
                                  title="Insert image"
                                  type="button"
                                >
                                  <i
                                    class="material-icons"
                                  >
                                    insert_photo
                                  </i>
                                </button>
                                <div
                                  class="popover top-left hidden"
                                />
                              </span>
                              <span
                                class="popoverWrapper"
                              >
                                <button
                                  class="button btn btn-secondary btn-transparent"
                                  title="Insert emoji"
                                  type="button"
                                >
                                  <i
                                    class="material-icons"
                                  >
                                    insert_emoticon
                                  </i>
                                </button>
                                <div
                                  class="p-0 d-flex popover top-left hidden"
                                />
                              </span>
                            </div>
                            <div
                              class="hoverOverlay"
                            >
                              Add files as attachments
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-success"
            >
              Create & activate campaign
            </button>
          </form>
        </div>
        <div
          class="col"
        >
          <div
            class="preview"
          >
            <div
              class="titlebar"
            />
            <div
              class="campaign"
            >
              <div
                class="header"
              >
                <div
                  class="author"
                >
                  <div
                    class="component authorAvatar"
                    style="width: 50px; height: 50px;"
                  >
                    <div
                      class="initials"
                      style="width: 50px; height: 50px; font-size: 20.833333333333336px;"
                    >
                      <span
                        style="line-height: 52px;"
                      >
                        Ra
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="message"
                >
                  <div
                    class="authorName"
                  >
                    <b>
                      [Random agent's name]
                    </b>
                  </div>
                  <div
                    class="messageText"
                  >
                    <div>
                      <br />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="poweredby"
              >
                Powered by Gorgias
              </div>
              <div
                class="footer"
              >
                Click to reply
              </div>
            </div>
            <div
              class="button"
              style="background-color: rgb(254, 254, 254);"
            >
              <img
                alt="close icon"
                class="icon"
                src="/static/private/img/icons/DefaultCloseIcon.svg"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CampaignDetail component should display the campaign correctly when updating it 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="d-flex align-items-center justify-content-between flex-wrap page-header"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations"
            >
              Integrations
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations/smooch_inside/1"
            >
              Chat (Deprecated)
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations/smooch_inside/1/campaigns"
            >
              Campaigns
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            My little campaign
          </li>
        </ol>
      </nav>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/migration"
      >
        Migration
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/appearance"
      >
        Appearance
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/installation"
      >
        Installation
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/preferences"
      >
        Preferences
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/campaigns"
      >
        Campaigns
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/quick_replies"
      >
        Quick replies
      </a>
    </nav>
    <div
      class="page-container container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <form
            class=""
          >
            <div
              class="mb-4"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <label
                  class="control-label"
                  for="id-name"
                >
                  Campaign name
                </label>
                <div
                  class=""
                >
                  <input
                    class="form-control"
                    id="id-name"
                    placeholder="My new campaign"
                    required=""
                    type="input"
                    value="My little campaign"
                  />
                </div>
              </div>
            </div>
            <h5>
              Choose your audience
            </h5>
            <div
              class="mb-4"
            >
              <div
                class="triggerWrapper"
              >
                <div
                  class="btn-frozen btn btn-info"
                >
                  Current URL
                </div>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class=""
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          contains
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          is
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          is not
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          does not contain
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          starts with
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          ends with
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="InputField form-group"
                  color=""
                >
                  <div
                    class=""
                  >
                    <input
                      class="form-control"
                      id="id-value"
                      type="input"
                      value="gorgias"
                    />
                  </div>
                </div>
                <div
                  class="btn-frozen btn btn-warning"
                >
                  and
                </div>
                <div
                  class="closeWrapper"
                >
                  <i
                    class="material-icons text-danger clickable"
                  >
                    clear
                  </i>
                </div>
              </div>
              <div
                class="triggerWrapper"
              >
                <div
                  class="btn-frozen btn btn-info"
                >
                  Time spent on page
                </div>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class=""
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          is greater than
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      <h6
                        class="dropdown-header"
                        tabindex="-1"
                      >
                        No result
                      </h6>
                    </div>
                  </div>
                </div>
                <div
                  class="InputField secondsCounter form-group"
                  color=""
                >
                  <div
                    class="input-group"
                  >
                    <input
                      class="form-control"
                      id="id-input-2"
                      step="1"
                      type="number"
                      value="42"
                    />
                    <span
                      class="input-group-append"
                    >
                      <span
                        class="input-group-text"
                      >
                        seconds
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="closeWrapper"
                >
                  <i
                    class="material-icons text-danger clickable"
                  >
                    clear
                  </i>
                </div>
              </div>
              <div
                class="dropdown"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="mr-2 dropdown-toggle btn btn-secondary"
                  type="button"
                >
                  <i
                    class="material-icons mr-2"
                  >
                    add
                  </i>
                  Add condition
                </button>
                <div
                  aria-hidden="true"
                  class="dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Current URL
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Time spent on page
                  </button>
                </div>
              </div>
            </div>
            <h5>
              Write your message
            </h5>
            <div
              class="mb-4"
            >
              <div
                class="mb-2 authorWrapper"
              >
                <span>
                  From: 
                </span>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="authorInput"
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          <div
                            class="AgentLabel"
                          >
                            <span
                              class="material-icons md-2"
                            >
                              account_circle
                            </span>
                            <span
                              class="name"
                              style="max-width: 100px;"
                            >
                              John
                            </span>
                          </div>
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          <div
                            class="AgentLabel"
                          >
                            <span
                              class="material-icons md-2"
                            >
                              account_circle
                            </span>
                            <span
                              class="name"
                              style="max-width: 100px;"
                            >
                              Doe
                            </span>
                          </div>
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Random agent
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <div
                    class="InputField required form-group"
                    color=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="rich-textarea-wrapper"
                      >
                        <div
                          class="editor-wrapper"
                        >
                          <div
                            class="withMinHeight"
                          >
                            <div
                              class="DraftEditor-root"
                            >
                              <div
                                class="DraftEditor-editorContainer"
                              >
                                <div
                                  aria-autocomplete="list"
                                  aria-describedby="placeholder-someRandomKey"
                                  aria-expanded="true"
                                  class="notranslate public-DraftEditor-content"
                                  contenteditable="true"
                                  role="combobox"
                                  spellcheck="false"
                                  style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                                >
                                  <div
                                    data-contents="true"
                                  >
                                    <div
                                      class=""
                                      data-block="true"
                                      data-editor="someRandomKey"
                                      data-offset-key="someRandomKey-0-0"
                                    >
                                      <div
                                        class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                        data-offset-key="someRandomKey-0-0"
                                      >
                                        <span
                                          data-offset-key="someRandomKey-0-0"
                                        >
                                          <span
                                            data-text="true"
                                          >
                                            My little message
                                          </span>
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <input
                              required=""
                              style="opacity: 0; height: 0px; padding: 0px; overflow: hidden;"
                              value="My little message"
                            />
                          </div>
                        </div>
                        <div
                          class="editor-toolbar page"
                        >
                          <div
                            class="actionsWrapper"
                          >
                            <div
                              class="actions"
                            >
                              <button
                                class="button btn btn-secondary btn-transparent"
                                title="Bold"
                                type="button"
                              >
                                <i
                                  class="material-icons"
                                >
                                  format_bold
                                </i>
                              </button>
                              <button
                                class="button btn btn-secondary btn-transparent"
                                title="Italic"
                                type="button"
                              >
                                <i
                                  class="material-icons"
                                >
                                  format_italic
                                </i>
                              </button>
                              <button
                                class="button btn btn-secondary btn-transparent"
                                title="Underline"
                                type="button"
                              >
                                <i
                                  class="material-icons"
                                >
                                  format_underline
                                </i>
                              </button>
                              <span
                                class="popoverWrapper"
                              >
                                <button
                                  class="button btn btn-secondary btn-transparent"
                                  title="Insert image"
                                  type="button"
                                >
                                  <i
                                    class="material-icons"
                                  >
                                    insert_photo
                                  </i>
                                </button>
                                <div
                                  class="popover top-left hidden"
                                />
                              </span>
                              <span
                                class="popoverWrapper"
                              >
                                <button
                                  class="button btn btn-secondary btn-transparent"
                                  title="Insert emoji"
                                  type="button"
                                >
                                  <i
                                    class="material-icons"
                                  >
                                    insert_emoticon
                                  </i>
                                </button>
                                <div
                                  class="p-0 d-flex popover top-left hidden"
                                />
                              </span>
                            </div>
                            <div
                              class="hoverOverlay"
                            >
                              Add files as attachments
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-success"
            >
              Save
            </button>
            <div
              class="component d-inline-block float-right"
              id="delete-campaign-button"
            >
              <button
                class="btn btn-secondary"
                id="confirm-button-delete-campaign-button"
                type="button"
              >
                <i
                  class="material-icons mr-1 text-danger"
                >
                  delete
                </i>
                Delete campaign
              </button>
            </div>
          </form>
        </div>
        <div
          class="col"
        >
          <div
            class="preview"
          >
            <div
              class="titlebar"
            />
            <div
              class="campaign"
            >
              <div
                class="header"
              >
                <div
                  class="author"
                >
                  <div
                    class="component hasImage authorAvatar"
                    style="width: 50px; height: 50px;"
                  >
                    <div
                      class="initials"
                      style="width: 50px; height: 50px; font-size: 20.833333333333336px;"
                    >
                      <span
                        style="line-height: 52px;"
                      >
                        J
                      </span>
                    </div>
                    <img
                      alt="avatar"
                      class="gravatar"
                      src="https://gravatar.docker/as74d6as4d86as4dasd/avatar.jpg"
                    />
                  </div>
                </div>
                <div
                  class="message"
                >
                  <div
                    class="authorName"
                  >
                    <b>
                      John
                    </b>
                  </div>
                  <div
                    class="messageText"
                  >
                    <div>
                      My little message
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="poweredby"
              >
                Powered by Gorgias
              </div>
              <div
                class="footer"
              >
                Click to reply
              </div>
            </div>
            <div
              class="button"
              style="background-color: rgb(254, 254, 254);"
            >
              <img
                alt="close icon"
                class="icon"
                src="/static/private/img/icons/DefaultCloseIcon.svg"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CampaignDetail component should display the campaign correctly when updating it and strip the html 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="d-flex align-items-center justify-content-between flex-wrap page-header"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations"
            >
              Integrations
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations/smooch_inside/1"
            >
              Chat (Deprecated)
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations/smooch_inside/1/campaigns"
            >
              Campaigns
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            My little campaign
          </li>
        </ol>
      </nav>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/migration"
      >
        Migration
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/appearance"
      >
        Appearance
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/installation"
      >
        Installation
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/preferences"
      >
        Preferences
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/campaigns"
      >
        Campaigns
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/1/quick_replies"
      >
        Quick replies
      </a>
    </nav>
    <div
      class="page-container container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <form
            class=""
          >
            <div
              class="mb-4"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <label
                  class="control-label"
                  for="id-name"
                >
                  Campaign name
                </label>
                <div
                  class=""
                >
                  <input
                    class="form-control"
                    id="id-name"
                    placeholder="My new campaign"
                    required=""
                    type="input"
                    value="My little campaign"
                  />
                </div>
              </div>
            </div>
            <h5>
              Choose your audience
            </h5>
            <div
              class="mb-4"
            >
              <div
                class="triggerWrapper"
              >
                <div
                  class="btn-frozen btn btn-info"
                >
                  Current URL
                </div>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class=""
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          contains
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          is
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          is not
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          does not contain
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          starts with
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          ends with
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="InputField form-group"
                  color=""
                >
                  <div
                    class=""
                  >
                    <input
                      class="form-control"
                      id="id-value"
                      type="input"
                      value="gorgias"
                    />
                  </div>
                </div>
                <div
                  class="btn-frozen btn btn-warning"
                >
                  and
                </div>
                <div
                  class="closeWrapper"
                >
                  <i
                    class="material-icons text-danger clickable"
                  >
                    clear
                  </i>
                </div>
              </div>
              <div
                class="triggerWrapper"
              >
                <div
                  class="btn-frozen btn btn-info"
                >
                  Time spent on page
                </div>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class=""
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          is greater than
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      <h6
                        class="dropdown-header"
                        tabindex="-1"
                      >
                        No result
                      </h6>
                    </div>
                  </div>
                </div>
                <div
                  class="InputField secondsCounter form-group"
                  color=""
                >
                  <div
                    class="input-group"
                  >
                    <input
                      class="form-control"
                      id="id-input-4"
                      step="1"
                      type="number"
                      value="42"
                    />
                    <span
                      class="input-group-append"
                    >
                      <span
                        class="input-group-text"
                      >
                        seconds
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="closeWrapper"
                >
                  <i
                    class="material-icons text-danger clickable"
                  >
                    clear
                  </i>
                </div>
              </div>
              <div
                class="dropdown"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="mr-2 dropdown-toggle btn btn-secondary"
                  type="button"
                >
                  <i
                    class="material-icons mr-2"
                  >
                    add
                  </i>
                  Add condition
                </button>
                <div
                  aria-hidden="true"
                  class="dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Current URL
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Time spent on page
                  </button>
                </div>
              </div>
            </div>
            <h5>
              Write your message
            </h5>
            <div
              class="mb-4"
            >
              <div
                class="mb-2 authorWrapper"
              >
                <span>
                  From: 
                </span>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="authorInput"
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          <div
                            class="AgentLabel"
                          >
                            <span
                              class="material-icons md-2"
                            >
                              account_circle
                            </span>
                            <span
                              class="name"
                              style="max-width: 100px;"
                            >
                              John
                            </span>
                          </div>
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          <div
                            class="AgentLabel"
                          >
                            <span
                              class="material-icons md-2"
                            >
                              account_circle
                            </span>
                            <span
                              class="name"
                              style="max-width: 100px;"
                            >
                              Doe
                            </span>
                          </div>
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Random agent
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <div
                    class="InputField required form-group"
                    color=""
                  >
                    <div
                      class=""
                    >
                      <div
                        class="rich-textarea-wrapper"
                      >
                        <div
                          class="editor-wrapper"
                        >
                          <div
                            class="withMinHeight"
                          >
                            <div
                              class="DraftEditor-root"
                            >
                              <div
                                class="DraftEditor-editorContainer"
                              >
                                <div
                                  aria-autocomplete="list"
                                  aria-describedby="placeholder-someRandomKey"
                                  aria-expanded="true"
                                  class="notranslate public-DraftEditor-content"
                                  contenteditable="true"
                                  role="combobox"
                                  spellcheck="false"
                                  style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                                >
                                  <div
                                    data-contents="true"
                                  >
                                    <div
                                      class=""
                                      data-block="true"
                                      data-editor="someRandomKey"
                                      data-offset-key="someRandomKey-0-0"
                                    >
                                      <div
                                        class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                        data-offset-key="someRandomKey-0-0"
                                      >
                                        <span
                                          data-offset-key="someRandomKey-0-0"
                                        >
                                          <span
                                            data-text="true"
                                          >
                                            My little message
                                          </span>
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <input
                              required=""
                              style="opacity: 0; height: 0px; padding: 0px; overflow: hidden;"
                              value="My little message"
                            />
                          </div>
                        </div>
                        <div
                          class="editor-toolbar page"
                        >
                          <div
                            class="actionsWrapper"
                          >
                            <div
                              class="actions"
                            >
                              <button
                                class="button btn btn-secondary btn-transparent"
                                title="Bold"
                                type="button"
                              >
                                <i
                                  class="material-icons"
                                >
                                  format_bold
                                </i>
                              </button>
                              <button
                                class="button btn btn-secondary btn-transparent"
                                title="Italic"
                                type="button"
                              >
                                <i
                                  class="material-icons"
                                >
                                  format_italic
                                </i>
                              </button>
                              <button
                                class="button btn btn-secondary btn-transparent"
                                title="Underline"
                                type="button"
                              >
                                <i
                                  class="material-icons"
                                >
                                  format_underline
                                </i>
                              </button>
                              <span
                                class="popoverWrapper"
                              >
                                <button
                                  class="button btn btn-secondary btn-transparent"
                                  title="Insert image"
                                  type="button"
                                >
                                  <i
                                    class="material-icons"
                                  >
                                    insert_photo
                                  </i>
                                </button>
                                <div
                                  class="popover top-left hidden"
                                />
                              </span>
                              <span
                                class="popoverWrapper"
                              >
                                <button
                                  class="button btn btn-secondary btn-transparent"
                                  title="Insert emoji"
                                  type="button"
                                >
                                  <i
                                    class="material-icons"
                                  >
                                    insert_emoticon
                                  </i>
                                </button>
                                <div
                                  class="p-0 d-flex popover top-left hidden"
                                />
                              </span>
                            </div>
                            <div
                              class="hoverOverlay"
                            >
                              Add files as attachments
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-success"
            >
              Save
            </button>
            <div
              class="component d-inline-block float-right"
              id="delete-campaign-button"
            >
              <button
                class="btn btn-secondary"
                id="confirm-button-delete-campaign-button"
                type="button"
              >
                <i
                  class="material-icons mr-1 text-danger"
                >
                  delete
                </i>
                Delete campaign
              </button>
            </div>
          </form>
        </div>
        <div
          class="col"
        >
          <div
            class="preview"
          >
            <div
              class="titlebar"
            />
            <div
              class="campaign"
            >
              <div
                class="header"
              >
                <div
                  class="author"
                >
                  <div
                    class="component hasImage authorAvatar"
                    style="width: 50px; height: 50px;"
                  >
                    <div
                      class="initials"
                      style="width: 50px; height: 50px; font-size: 20.833333333333336px;"
                    >
                      <span
                        style="line-height: 52px;"
                      >
                        J
                      </span>
                    </div>
                    <img
                      alt="avatar"
                      class="gravatar"
                      src="https://gravatar.docker/as74d6as4d86as4dasd/avatar.jpg"
                    />
                  </div>
                </div>
                <div
                  class="message"
                >
                  <div
                    class="authorName"
                  >
                    <b>
                      John
                    </b>
                  </div>
                  <div
                    class="messageText"
                  >
                    <div>
                      My little message
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="poweredby"
              >
                Powered by Gorgias
              </div>
              <div
                class="footer"
              >
                Click to reply
              </div>
            </div>
            <div
              class="button"
              style="background-color: rgb(254, 254, 254);"
            >
              <img
                alt="close icon"
                class="icon"
                src="/static/private/img/icons/DefaultCloseIcon.svg"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
